2005-03-29  Mark D. Baushke  <mdb@cvshome.org>

	* mktime.c, strftime.c: Update from GNULIB.

2005-03-23  Derek Price  <derek@ximbiot.com>

	* Makefile.am (getdate_SOURCES): Remove sources that are now included
	via $(noinst_LIBRARIES).

2005-03-22  Mark D. Baushke  <mdb@cvshome.org>

	* mktime.c, regex.c, stdint_.h, strftime.c, strtol.c: Update from
	GNULIB.

2005-03-10  Mark D. Baushke  <mdb@cvshome.org>

	* mktime.c, save-cwd.c, strftime.c, strtol.c: Update from GNULIB.

2005-03-08  Conrad T. Pino  <Conrad@Pino.com>

	* .cvsignore: Add stdint.h entry.

2005-03-07  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.dsp: Synchronize with GNULIB updates.
	Remove valloc.c file. Add files __fpending.c, __fpending.h,
	chdir-long.h, closeout.c, closeout.h, getcwd.h,
	pagealign_alloc.c, pagealign_alloc.h, quotearg.c, quotearg.h.
	* libcvs.dep, libcvs.mak: Regenerate for libcvs.dsp change.

2005-03-07  Mark D. Baushke  <mdb@cvshome.org>

	* pagealign_alloc.c: Update from GNULIB.

2005-03-04  Jim Hyslop  <jhyslop@ieee.org>

	* xtime.h: added include guards to fix compile errors on IRIX 5.3
	(Patch from Georg Schwarz <georg.scwarz@freenet.de>.)

2005-03-03  Derek Price  <derek@ximbiot.com>

	* pagealign_alloc.c, pagealign_alloc.h: New files from GNULIB.
	* valloc.c: Remove this obsolete file.

2005-03-02  Jim Meyering  <jim@meyering.net>

	* Makefile.am (libcvs_a_SOURCES): Add the following to support
	the GNULIB closeout module: closeout.c, closeout.h, quotearg.c,
	quotearg.h, __fpending.h.
	* closeout.c, closeout.h: New files.
	* quotearg.c, quotearg.h: New files.
	* __fpending.c, __fpending.h: New files.
	* Makefile.gnulib: Regenerate.

2005-03-02  Derek Price  <derek@ximbiot.com>

	* gettext.h, setenv.c, vasnprintf.c, vasprintf.c: Update from GNULIB.

2005-03-01  Derek Price  <derek@ximbiot.com>

	Update installed GNULIB modules.
	* Makefile.am: Tweak for new GNULIB updates.
	* alloca_.h, dup2.c, error.c, ftruncate.c, getdate.c, getdate.y,